<!--<?xml version="1.0" encoding="utf-8"?>-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".quiz">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8sp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/answer_the_following_question"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        android:textSize="35sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/question"
        android:backgroundTint="@color/blue"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8sp"
            android:gravity="center"
            android:paddingHorizontal="20sp"
            android:paddingVertical="4sp"

            android:text="@string/total_submitted"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/bg"
            android:textSize="25dp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/attempt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/_1_1"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/bg"
            android:textSize="80sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/Q1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="40dp"
        android:background="@drawable/question"
        android:clickable="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingVertical="8sp"
        android:paddingStart="15sp"
        android:text="@string/question_1"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textColor="@color/bg"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/Q2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="25dp"
        android:background="@drawable/question"
        android:clickable="false"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingVertical="8sp"
        android:paddingStart="15sp"
        android:text="@string/question_2"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textColor="@color/bg"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Q1" />

    <TextView
        android:id="@+id/Q3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="25dp"
        android:background="@drawable/question"
        android:clickable="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingVertical="8sp"
        android:paddingStart="15sp"
        android:text="question 3"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textColor="@color/bg"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Q2" />

    <Button
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:backgroundTint="#22A699"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/result"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:visibility="gone"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Q3" />


</androidx.constraintlayout.widget.ConstraintLayout>